examples/test/testpolicy12753.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12753
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key21: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value34
          key30: value24
      podSelector:
        matchLabels:
          key27: value17
          key26: value4
